src/objects/FSTR__PCE_Definition__c.object
<CustomObject>
    <customHelpPage>FSTR__PCEHelp</customHelpPage>
    <description>Container to define business processes for an organization</description>
    <fields>
        <fullName>FSTR__Categories__c</fullName>
        <description>Field to categorize definitions.</description>
        <inlineHelpText>Field to categorize definitions.</inlineHelpText>
        <label>Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Chatter_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this box is checked and Automatic Chatter Posting is enabled; any records that use this Definition will automatically post updates to Chatter.  If unchecked, no automatic Chatter updates will be posted by records that use this Definition.</description>
        <inlineHelpText>If this box is checked and Automatic Chatter Posting is enabled; any records that use this Definition will automatically post updates to Chatter.  If unchecked, no automatic Chatter updates will be posted by records that use this Definition.</inlineHelpText>
        <label>Chatter Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Criteria_Count__c</fullName>
        <label>Criteria Count</label>
        <summaryForeignKey>FSTR__PCE_Definition_Criteria__c.FSTR__PCE_Definition__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FSTR__Definition_Criteria__c</fullName>
        <inlineHelpText>this field is a dynamic string that is updated by a trigger to reflect any criteria that apply to this definition</inlineHelpText>
        <label>Definition Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Definition_Hierarchy__c</fullName>
        <label>Definition Hierarchy</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Description__c</fullName>
        <description>Add a description of the business process here.</description>
        <inlineHelpText>Add a description of the business process here.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FSTR__Disable_Object_Status_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Object Status Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to determine if the process is in use.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Number_of_Top_Level_Reevaluation_Steps__c</fullName>
        <label>Number of Top Level Reevaluation Steps</label>
        <summaryFilterItems>
            <field>FSTR__PCE_Step__c.FSTR__Reevaluate_When__c</field>
            <operation>notEqual</operation>
            <value>--None--</value>
        </summaryFilterItems>
        <summaryForeignKey>FSTR__PCE_Step__c.FSTR__Definition__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FSTR__Object_Display_Name__c</fullName>
        <label>Object Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Object_Name__c</fullName>
        <description>Field to hold the salesforce object that this workflow applies.  The selected object will need to have a trigger manually created to execute the business process code.</description>
        <inlineHelpText>This is the object the process will be executed against.  To kick off this process create an object of this type.</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Object_Record_Type_Name__c</fullName>
        <label>Object Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Object_Record_Type__c</fullName>
        <description>This holds the record type id that the business process supports.  The record type will be a record type that corresponds to the object specified in Object Name</description>
        <inlineHelpText>This is the record type the process will be executed against.  To kick off this process create an object (type specified in the Object Name field) with this record type.</inlineHelpText>
        <label>Object Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__PO_Propagation_Status__c</fullName>
        <label>When Process Status Set To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__SO_Propagation_Status__c</fullName>
        <label>Set Open Steps To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Definition</label>
    <listViews>
        <fullName>FSTR__All</fullName>
        <columns>NAME</columns>
        <columns>FSTR__Object_Display_Name__c</columns>
        <columns>FSTR__Object_Record_Type__c</columns>
        <columns>FSTR__Object_Record_Type_Name__c</columns>
        <columns>FSTR__Definition_Criteria__c</columns>
        <columns>FSTR__Criteria_Count__c</columns>
        <columns>FSTR__Is_Active__c</columns>
        <columns>FSTR__Object_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FSTR__Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>